--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!doctype html>
 
+<html>
+
+<head>
+  <title>Street View split-map-panes</title>
+  <link rel="stylesheet" href="./styles.css">
+  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  
+
+</head>
+
+<body>
+
+  <audio id="background-audio" autoplay loop type="audio/mpeg">Your browser does not support the audio element.</audio>
+  <div id="pano"></div>
+  <div id="map"></div>
+  <p id="paragraph">DEFAULT</p>
+  <div id = "submitbtn">
+    <button type = "button" id = "submit">Submit</button>
+  </div>
+
+  <!-- 
+      The `defer` attribute causes the script to execute after the full HTML
+      document has been parsed. For non-blocking uses, avoiding race conditions,
+      and consistent behavior across browsers, consider loading using Promises. See
+      https://developers.google.com/maps/documentation/javascript/load-maps-js-api
+      for more information.
+      -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOB3wAcUOx_wjfd5KCApjhj-TYxJEd924&callback=initialize&loading=async&v=weekly"
+    defer></script>
+  <script src="./script.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  
+
+</body>
+
+</html>
