--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       https://developers.google.com/maps/documentation/javascript/load-maps-js-api
       for more information.
       -->
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOB3wAcUOx_wjfd5KCApjhj-TYxJEd924&callback=initialize&loading=async&v=weekly"
-    defer></script>
+
+  <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+  <script id="google-maps-js-api" defer></script>
   <script src="./script.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   
