removed unnecessary geocoding api; adding audio dynamically

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
   <p></p>
 
-  <audio id="background-audio" autoplay loop type="audio/mpeg">Your browser does not support the audio element.</audio>
   <div id="pano"></div>
   <div id="map"></div>
   <p id="paragraph">DEFAULT</p>
@@ -31,7 +30,7 @@
       for more information.
       --> 
 
-  <script id="google-maps-js-api" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOB3wAcUOx_wjfd5KCApjhj-TYxJEd924&callback=initialize&v=weekly" defer></script>
+  <script id="google-maps-js-api" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOB3wAcUOx_wjfd5KCApjhj-TYxJEd924&callback=initialize&v=weekly&loading=async" defer></script>
   <script src="./script.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   
