--- a/index.html
+++ b/index.html
@@ -8,18 +8,31 @@
   <link rel="stylesheet" href="./styles.css">
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
 
 </head>
 
 <body>
-  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
-    src="http://119.82.252.6:8080/broadwave.mp3"></iframe>
+  <nav class="navbar navbar-purple">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">GlobeSense</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+  
   <p></p>
 
   <div id="pano"></div>
   <div id="map"></div>
   <p id="paragraph">DEFAULT</p>
+
   <div id = "submitbtn">
     <button type = "button" id = "submit">Submit</button>
   </div>
@@ -35,6 +48,7 @@
   <script id="google-maps-js-api" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOB3wAcUOx_wjfd5KCApjhj-TYxJEd924&callback=initialize&v=weekly&loading=async" defer></script>
   <script src="./script.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
 
 </body>
