--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+  <div id="loop" class="center"></div>
+<div id="bike-wrapper" class="center">
+  <div id="bike" class="centerBike"></div>
+</div>
   <nav class="navbar navbar-purple">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">GlobeSense</a>
@@ -27,11 +31,14 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
   
-  <p></p>
+  
 
   <div id="pano"></div>
-  <div id="map"></div>
-  <p id="paragraph">DEFAULT</p>
+  <div id="map">
+   
+  </div>
+
+
 
   <div id = "submitbtn">
     <button type = "button" id = "submit">Submit</button>
