Co-authored-by: riteshbhirud <riteshbhirud@users.noreply.github.com> modified game over screen

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
 <div id="gameOverScreen">
   <h1 id="gameOverMessage" style="text-align: center; margin-top: 20px;">Game Over!</h1>
   <p id="Points" style="text-align: center;"> </p>
-  <p id="Distance" style="text-align: center;"></p>
+  <h2 id="Distance" style="text-align: center;"></h2>
+  <h3 id ="songName"> </h3>
   <button id="playAgain">Play Again!</button>
+
+  
 </div>
 
 
