--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
   
-  
+  <p id="timer"></p>
   <div id="pano"></div>
 
   <div id="parentMap">
